compiler/tests/errortests/defer-noarg.txt
FILENAME:2:5: error: expected block after 'defer' statement!
    defer;
    ^----
